myParser.automaton
State 0:
main' -> . main [ # ]
-- On MATCH shift to state 1
-- On LPAR shift to state 2
-- On LET shift to state 91
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On EOF shift to state 106
-- On BOOL shift to state 18
-- On main shift to state 107
-- On factor_expr shift to state 19
-- On expr shift to state 108
-- On cons_expr shift to state 27
-- On compare_expr shift to state 35
-- On command_expr shift to state 109
-- On atomic_expr shift to state 21
-- On arith_expr shift to state 40
-- On app_expr shift to state 32

State 1:
expr -> MATCH . expr WITH branch_expr END [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On MATCH shift to state 1
-- On LPAR shift to state 2
-- On LET shift to state 3
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On BOOL shift to state 18
-- On factor_expr shift to state 19
-- On expr shift to state 82
-- On cons_expr shift to state 27
-- On compare_expr shift to state 35
-- On atomic_expr shift to state 21
-- On arith_expr shift to state 40
-- On app_expr shift to state 32

State 2:
atomic_expr -> LPAR . expr COMMA expr RPAR [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
atomic_expr -> LPAR . expr RPAR [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
-- On MATCH shift to state 1
-- On LPAR shift to state 2
-- On LET shift to state 3
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On BOOL shift to state 18
-- On factor_expr shift to state 19
-- On expr shift to state 77
-- On cons_expr shift to state 27
-- On compare_expr shift to state 35
-- On atomic_expr shift to state 21
-- On arith_expr shift to state 40
-- On app_expr shift to state 32

State 3:
expr -> LET . pattern_expr EQ expr IN expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
expr -> LET . REC var var EQ expr IN expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On UNDERSCORE shift to state 4
-- On REC shift to state 5
-- On LPAR shift to state 54
-- On LBRA shift to state 55
-- On INT shift to state 57
-- On ID shift to state 6
-- On BOOL shift to state 58
-- On var shift to state 59
-- On pattern_expr shift to state 72

State 4:
pattern_expr -> UNDERSCORE . [ SEMI RPAR RBRA RARROW EQ CONS COMMA ]
-- On SEMI reduce production pattern_expr -> UNDERSCORE 
-- On RPAR reduce production pattern_expr -> UNDERSCORE 
-- On RBRA reduce production pattern_expr -> UNDERSCORE 
-- On RARROW reduce production pattern_expr -> UNDERSCORE 
-- On EQ reduce production pattern_expr -> UNDERSCORE 
-- On CONS reduce production pattern_expr -> UNDERSCORE 
-- On COMMA reduce production pattern_expr -> UNDERSCORE 

State 5:
expr -> LET REC . var var EQ expr IN expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On ID shift to state 6
-- On var shift to state 7

State 6:
var -> ID . [ UNDERSCORE SEMI RPAR RBRA RARROW LPAR LBRA INT ID EQ CONS COMMA BOOL ]
-- On UNDERSCORE reduce production var -> ID 
-- On SEMI reduce production var -> ID 
-- On RPAR reduce production var -> ID 
-- On RBRA reduce production var -> ID 
-- On RARROW reduce production var -> ID 
-- On LPAR reduce production var -> ID 
-- On LBRA reduce production var -> ID 
-- On INT reduce production var -> ID 
-- On ID reduce production var -> ID 
-- On EQ reduce production var -> ID 
-- On CONS reduce production var -> ID 
-- On COMMA reduce production var -> ID 
-- On BOOL reduce production var -> ID 

State 7:
expr -> LET REC var . var EQ expr IN expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On ID shift to state 6
-- On var shift to state 8

State 8:
expr -> LET REC var var . EQ expr IN expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On EQ shift to state 9

State 9:
expr -> LET REC var var EQ . expr IN expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On MATCH shift to state 1
-- On LPAR shift to state 2
-- On LET shift to state 3
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On BOOL shift to state 18
-- On factor_expr shift to state 19
-- On expr shift to state 51
-- On cons_expr shift to state 27
-- On compare_expr shift to state 35
-- On atomic_expr shift to state 21
-- On arith_expr shift to state 40
-- On app_expr shift to state 32

State 10:
atomic_expr -> LBRA . RBRA [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
atomic_expr -> LBRA . list_expr RBRA [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
-- On RBRA shift to state 11
-- On MATCH shift to state 1
-- On LPAR shift to state 2
-- On LET shift to state 3
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On BOOL shift to state 18
-- On list_expr shift to state 46
-- On factor_expr shift to state 19
-- On expr shift to state 48
-- On cons_expr shift to state 27
-- On compare_expr shift to state 35
-- On atomic_expr shift to state 21
-- On arith_expr shift to state 40
-- On app_expr shift to state 32

State 11:
atomic_expr -> LBRA RBRA . [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
-- On WITH reduce production atomic_expr -> LBRA RBRA 
-- On TIMES reduce production atomic_expr -> LBRA RBRA 
-- On THEN reduce production atomic_expr -> LBRA RBRA 
-- On SEMI reduce production atomic_expr -> LBRA RBRA 
-- On RPAR reduce production atomic_expr -> LBRA RBRA 
-- On RBRA reduce production atomic_expr -> LBRA RBRA 
-- On PLUS reduce production atomic_expr -> LBRA RBRA 
-- On MINUS reduce production atomic_expr -> LBRA RBRA 
-- On LT reduce production atomic_expr -> LBRA RBRA 
-- On LPAR reduce production atomic_expr -> LBRA RBRA 
-- On LBRA reduce production atomic_expr -> LBRA RBRA 
-- On INT reduce production atomic_expr -> LBRA RBRA 
-- On IN reduce production atomic_expr -> LBRA RBRA 
-- On ID reduce production atomic_expr -> LBRA RBRA 
-- On EQ reduce production atomic_expr -> LBRA RBRA 
-- On EOF reduce production atomic_expr -> LBRA RBRA 
-- On EOC reduce production atomic_expr -> LBRA RBRA 
-- On END reduce production atomic_expr -> LBRA RBRA 
-- On ELSE reduce production atomic_expr -> LBRA RBRA 
-- On DIV reduce production atomic_expr -> LBRA RBRA 
-- On CONS reduce production atomic_expr -> LBRA RBRA 
-- On COMMA reduce production atomic_expr -> LBRA RBRA 
-- On BOOL reduce production atomic_expr -> LBRA RBRA 
-- On BAR reduce production atomic_expr -> LBRA RBRA 

State 12:
atomic_expr -> INT . [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
-- On WITH reduce production atomic_expr -> INT 
-- On TIMES reduce production atomic_expr -> INT 
-- On THEN reduce production atomic_expr -> INT 
-- On SEMI reduce production atomic_expr -> INT 
-- On RPAR reduce production atomic_expr -> INT 
-- On RBRA reduce production atomic_expr -> INT 
-- On PLUS reduce production atomic_expr -> INT 
-- On MINUS reduce production atomic_expr -> INT 
-- On LT reduce production atomic_expr -> INT 
-- On LPAR reduce production atomic_expr -> INT 
-- On LBRA reduce production atomic_expr -> INT 
-- On INT reduce production atomic_expr -> INT 
-- On IN reduce production atomic_expr -> INT 
-- On ID reduce production atomic_expr -> INT 
-- On EQ reduce production atomic_expr -> INT 
-- On EOF reduce production atomic_expr -> INT 
-- On EOC reduce production atomic_expr -> INT 
-- On END reduce production atomic_expr -> INT 
-- On ELSE reduce production atomic_expr -> INT 
-- On DIV reduce production atomic_expr -> INT 
-- On CONS reduce production atomic_expr -> INT 
-- On COMMA reduce production atomic_expr -> INT 
-- On BOOL reduce production atomic_expr -> INT 
-- On BAR reduce production atomic_expr -> INT 

State 13:
expr -> IF . expr THEN expr ELSE expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On MATCH shift to state 1
-- On LPAR shift to state 2
-- On LET shift to state 3
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On BOOL shift to state 18
-- On factor_expr shift to state 19
-- On expr shift to state 41
-- On cons_expr shift to state 27
-- On compare_expr shift to state 35
-- On atomic_expr shift to state 21
-- On arith_expr shift to state 40
-- On app_expr shift to state 32

State 14:
atomic_expr -> ID . [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
-- On WITH reduce production atomic_expr -> ID 
-- On TIMES reduce production atomic_expr -> ID 
-- On THEN reduce production atomic_expr -> ID 
-- On SEMI reduce production atomic_expr -> ID 
-- On RPAR reduce production atomic_expr -> ID 
-- On RBRA reduce production atomic_expr -> ID 
-- On PLUS reduce production atomic_expr -> ID 
-- On MINUS reduce production atomic_expr -> ID 
-- On LT reduce production atomic_expr -> ID 
-- On LPAR reduce production atomic_expr -> ID 
-- On LBRA reduce production atomic_expr -> ID 
-- On INT reduce production atomic_expr -> ID 
-- On IN reduce production atomic_expr -> ID 
-- On ID reduce production atomic_expr -> ID 
-- On EQ reduce production atomic_expr -> ID 
-- On EOF reduce production atomic_expr -> ID 
-- On EOC reduce production atomic_expr -> ID 
-- On END reduce production atomic_expr -> ID 
-- On ELSE reduce production atomic_expr -> ID 
-- On DIV reduce production atomic_expr -> ID 
-- On CONS reduce production atomic_expr -> ID 
-- On COMMA reduce production atomic_expr -> ID 
-- On BOOL reduce production atomic_expr -> ID 
-- On BAR reduce production atomic_expr -> ID 

State 15:
expr -> FUN . var RARROW expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On ID shift to state 6
-- On var shift to state 16

State 16:
expr -> FUN var . RARROW expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On RARROW shift to state 17

State 17:
expr -> FUN var RARROW . expr [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On MATCH shift to state 1
-- On LPAR shift to state 2
-- On LET shift to state 3
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 15
-- On BOOL shift to state 18
-- On factor_expr shift to state 19
-- On expr shift to state 26
-- On cons_expr shift to state 27
-- On compare_expr shift to state 35
-- On atomic_expr shift to state 21
-- On arith_expr shift to state 40
-- On app_expr shift to state 32

State 18:
atomic_expr -> BOOL . [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
-- On WITH reduce production atomic_expr -> BOOL 
-- On TIMES reduce production atomic_expr -> BOOL 
-- On THEN reduce production atomic_expr -> BOOL 
-- On SEMI reduce production atomic_expr -> BOOL 
-- On RPAR reduce production atomic_expr -> BOOL 
-- On RBRA reduce production atomic_expr -> BOOL 
-- On PLUS reduce production atomic_expr -> BOOL 
-- On MINUS reduce production atomic_expr -> BOOL 
-- On LT reduce production atomic_expr -> BOOL 
-- On LPAR reduce production atomic_expr -> BOOL 
-- On LBRA reduce production atomic_expr -> BOOL 
-- On INT reduce production atomic_expr -> BOOL 
-- On IN reduce production atomic_expr -> BOOL 
-- On ID reduce production atomic_expr -> BOOL 
-- On EQ reduce production atomic_expr -> BOOL 
-- On EOF reduce production atomic_expr -> BOOL 
-- On EOC reduce production atomic_expr -> BOOL 
-- On END reduce production atomic_expr -> BOOL 
-- On ELSE reduce production atomic_expr -> BOOL 
-- On DIV reduce production atomic_expr -> BOOL 
-- On CONS reduce production atomic_expr -> BOOL 
-- On COMMA reduce production atomic_expr -> BOOL 
-- On BOOL reduce production atomic_expr -> BOOL 
-- On BAR reduce production atomic_expr -> BOOL 

State 19:
arith_expr -> factor_expr . [ WITH THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE CONS COMMA BAR ]
factor_expr -> factor_expr . TIMES app_expr [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE DIV CONS COMMA BAR ]
factor_expr -> factor_expr . DIV app_expr [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE DIV CONS COMMA BAR ]
-- On TIMES shift to state 20
-- On DIV shift to state 24
-- On WITH reduce production arith_expr -> factor_expr 
-- On THEN reduce production arith_expr -> factor_expr 
-- On SEMI reduce production arith_expr -> factor_expr 
-- On RPAR reduce production arith_expr -> factor_expr 
-- On RBRA reduce production arith_expr -> factor_expr 
-- On PLUS reduce production arith_expr -> factor_expr 
-- On MINUS reduce production arith_expr -> factor_expr 
-- On LT reduce production arith_expr -> factor_expr 
-- On IN reduce production arith_expr -> factor_expr 
-- On EQ reduce production arith_expr -> factor_expr 
-- On EOF reduce production arith_expr -> factor_expr 
-- On EOC reduce production arith_expr -> factor_expr 
-- On END reduce production arith_expr -> factor_expr 
-- On ELSE reduce production arith_expr -> factor_expr 
-- On CONS reduce production arith_expr -> factor_expr 
-- On COMMA reduce production arith_expr -> factor_expr 
-- On BAR reduce production arith_expr -> factor_expr 

State 20:
factor_expr -> factor_expr TIMES . app_expr [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE DIV CONS COMMA BAR ]
-- On LPAR shift to state 2
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On BOOL shift to state 18
-- On atomic_expr shift to state 21
-- On app_expr shift to state 22

State 21:
app_expr -> atomic_expr . [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
-- On WITH reduce production app_expr -> atomic_expr 
-- On TIMES reduce production app_expr -> atomic_expr 
-- On THEN reduce production app_expr -> atomic_expr 
-- On SEMI reduce production app_expr -> atomic_expr 
-- On RPAR reduce production app_expr -> atomic_expr 
-- On RBRA reduce production app_expr -> atomic_expr 
-- On PLUS reduce production app_expr -> atomic_expr 
-- On MINUS reduce production app_expr -> atomic_expr 
-- On LT reduce production app_expr -> atomic_expr 
-- On LPAR reduce production app_expr -> atomic_expr 
-- On LBRA reduce production app_expr -> atomic_expr 
-- On INT reduce production app_expr -> atomic_expr 
-- On IN reduce production app_expr -> atomic_expr 
-- On ID reduce production app_expr -> atomic_expr 
-- On EQ reduce production app_expr -> atomic_expr 
-- On EOF reduce production app_expr -> atomic_expr 
-- On EOC reduce production app_expr -> atomic_expr 
-- On END reduce production app_expr -> atomic_expr 
-- On ELSE reduce production app_expr -> atomic_expr 
-- On DIV reduce production app_expr -> atomic_expr 
-- On CONS reduce production app_expr -> atomic_expr 
-- On COMMA reduce production app_expr -> atomic_expr 
-- On BOOL reduce production app_expr -> atomic_expr 
-- On BAR reduce production app_expr -> atomic_expr 

State 22:
app_expr -> app_expr . atomic_expr [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
factor_expr -> factor_expr TIMES app_expr . [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE DIV CONS COMMA BAR ]
-- On LPAR shift to state 2
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On BOOL shift to state 18
-- On atomic_expr shift to state 23
-- On WITH reduce production factor_expr -> factor_expr TIMES app_expr 
-- On TIMES reduce production factor_expr -> factor_expr TIMES app_expr 
-- On THEN reduce production factor_expr -> factor_expr TIMES app_expr 
-- On SEMI reduce production factor_expr -> factor_expr TIMES app_expr 
-- On RPAR reduce production factor_expr -> factor_expr TIMES app_expr 
-- On RBRA reduce production factor_expr -> factor_expr TIMES app_expr 
-- On PLUS reduce production factor_expr -> factor_expr TIMES app_expr 
-- On MINUS reduce production factor_expr -> factor_expr TIMES app_expr 
-- On LT reduce production factor_expr -> factor_expr TIMES app_expr 
-- On IN reduce production factor_expr -> factor_expr TIMES app_expr 
-- On EQ reduce production factor_expr -> factor_expr TIMES app_expr 
-- On EOF reduce production factor_expr -> factor_expr TIMES app_expr 
-- On EOC reduce production factor_expr -> factor_expr TIMES app_expr 
-- On END reduce production factor_expr -> factor_expr TIMES app_expr 
-- On ELSE reduce production factor_expr -> factor_expr TIMES app_expr 
-- On DIV reduce production factor_expr -> factor_expr TIMES app_expr 
-- On CONS reduce production factor_expr -> factor_expr TIMES app_expr 
-- On COMMA reduce production factor_expr -> factor_expr TIMES app_expr 
-- On BAR reduce production factor_expr -> factor_expr TIMES app_expr 

State 23:
app_expr -> app_expr atomic_expr . [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
-- On WITH reduce production app_expr -> app_expr atomic_expr 
-- On TIMES reduce production app_expr -> app_expr atomic_expr 
-- On THEN reduce production app_expr -> app_expr atomic_expr 
-- On SEMI reduce production app_expr -> app_expr atomic_expr 
-- On RPAR reduce production app_expr -> app_expr atomic_expr 
-- On RBRA reduce production app_expr -> app_expr atomic_expr 
-- On PLUS reduce production app_expr -> app_expr atomic_expr 
-- On MINUS reduce production app_expr -> app_expr atomic_expr 
-- On LT reduce production app_expr -> app_expr atomic_expr 
-- On LPAR reduce production app_expr -> app_expr atomic_expr 
-- On LBRA reduce production app_expr -> app_expr atomic_expr 
-- On INT reduce production app_expr -> app_expr atomic_expr 
-- On IN reduce production app_expr -> app_expr atomic_expr 
-- On ID reduce production app_expr -> app_expr atomic_expr 
-- On EQ reduce production app_expr -> app_expr atomic_expr 
-- On EOF reduce production app_expr -> app_expr atomic_expr 
-- On EOC reduce production app_expr -> app_expr atomic_expr 
-- On END reduce production app_expr -> app_expr atomic_expr 
-- On ELSE reduce production app_expr -> app_expr atomic_expr 
-- On DIV reduce production app_expr -> app_expr atomic_expr 
-- On CONS reduce production app_expr -> app_expr atomic_expr 
-- On COMMA reduce production app_expr -> app_expr atomic_expr 
-- On BOOL reduce production app_expr -> app_expr atomic_expr 
-- On BAR reduce production app_expr -> app_expr atomic_expr 

State 24:
factor_expr -> factor_expr DIV . app_expr [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE DIV CONS COMMA BAR ]
-- On LPAR shift to state 2
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On BOOL shift to state 18
-- On atomic_expr shift to state 21
-- On app_expr shift to state 25

State 25:
app_expr -> app_expr . atomic_expr [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
factor_expr -> factor_expr DIV app_expr . [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE DIV CONS COMMA BAR ]
-- On LPAR shift to state 2
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On BOOL shift to state 18
-- On atomic_expr shift to state 23
-- On WITH reduce production factor_expr -> factor_expr DIV app_expr 
-- On TIMES reduce production factor_expr -> factor_expr DIV app_expr 
-- On THEN reduce production factor_expr -> factor_expr DIV app_expr 
-- On SEMI reduce production factor_expr -> factor_expr DIV app_expr 
-- On RPAR reduce production factor_expr -> factor_expr DIV app_expr 
-- On RBRA reduce production factor_expr -> factor_expr DIV app_expr 
-- On PLUS reduce production factor_expr -> factor_expr DIV app_expr 
-- On MINUS reduce production factor_expr -> factor_expr DIV app_expr 
-- On LT reduce production factor_expr -> factor_expr DIV app_expr 
-- On IN reduce production factor_expr -> factor_expr DIV app_expr 
-- On EQ reduce production factor_expr -> factor_expr DIV app_expr 
-- On EOF reduce production factor_expr -> factor_expr DIV app_expr 
-- On EOC reduce production factor_expr -> factor_expr DIV app_expr 
-- On END reduce production factor_expr -> factor_expr DIV app_expr 
-- On ELSE reduce production factor_expr -> factor_expr DIV app_expr 
-- On DIV reduce production factor_expr -> factor_expr DIV app_expr 
-- On CONS reduce production factor_expr -> factor_expr DIV app_expr 
-- On COMMA reduce production factor_expr -> factor_expr DIV app_expr 
-- On BAR reduce production factor_expr -> factor_expr DIV app_expr 

State 26:
expr -> FUN var RARROW expr . [ WITH THEN SEMI RPAR RBRA IN EOF EOC END ELSE COMMA BAR ]
-- On WITH reduce production expr -> FUN var RARROW expr 
-- On THEN reduce production expr -> FUN var RARROW expr 
-- On SEMI reduce production expr -> FUN var RARROW expr 
-- On RPAR reduce production expr -> FUN var RARROW expr 
-- On RBRA reduce production expr -> FUN var RARROW expr 
-- On IN reduce production expr -> FUN var RARROW expr 
-- On EOF reduce production expr -> FUN var RARROW expr 
-- On EOC reduce production expr -> FUN var RARROW expr 
-- On END reduce production expr -> FUN var RARROW expr 
-- On ELSE reduce production expr -> FUN var RARROW expr 
-- On COMMA reduce production expr -> FUN var RARROW expr 
-- On BAR reduce production expr -> FUN var RARROW expr 

State 27:
compare_expr -> cons_expr . [ WITH THEN SEMI RPAR RBRA LT IN EQ EOF EOC END ELSE COMMA BAR ]
cons_expr -> cons_expr . CONS arith_expr [ WITH THEN SEMI RPAR RBRA LT IN EQ EOF EOC END ELSE CONS COMMA BAR ]
-- On CONS shift to state 28
-- On WITH reduce production compare_expr -> cons_expr 
-- On THEN reduce production compare_expr -> cons_expr 
-- On SEMI reduce production compare_expr -> cons_expr 
-- On RPAR reduce production compare_expr -> cons_expr 
-- On RBRA reduce production compare_expr -> cons_expr 
-- On LT reduce production compare_expr -> cons_expr 
-- On IN reduce production compare_expr -> cons_expr 
-- On EQ reduce production compare_expr -> cons_expr 
-- On EOF reduce production compare_expr -> cons_expr 
-- On EOC reduce production compare_expr -> cons_expr 
-- On END reduce production compare_expr -> cons_expr 
-- On ELSE reduce production compare_expr -> cons_expr 
-- On COMMA reduce production compare_expr -> cons_expr 
-- On BAR reduce production compare_expr -> cons_expr 

State 28:
cons_expr -> cons_expr CONS . arith_expr [ WITH THEN SEMI RPAR RBRA LT IN EQ EOF EOC END ELSE CONS COMMA BAR ]
-- On LPAR shift to state 2
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On BOOL shift to state 18
-- On factor_expr shift to state 19
-- On atomic_expr shift to state 21
-- On arith_expr shift to state 29
-- On app_expr shift to state 32

State 29:
arith_expr -> arith_expr . PLUS factor_expr [ WITH THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE CONS COMMA BAR ]
arith_expr -> arith_expr . MINUS factor_expr [ WITH THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE CONS COMMA BAR ]
cons_expr -> cons_expr CONS arith_expr . [ WITH THEN SEMI RPAR RBRA LT IN EQ EOF EOC END ELSE CONS COMMA BAR ]
-- On PLUS shift to state 30
-- On MINUS shift to state 33
-- On WITH reduce production cons_expr -> cons_expr CONS arith_expr 
-- On THEN reduce production cons_expr -> cons_expr CONS arith_expr 
-- On SEMI reduce production cons_expr -> cons_expr CONS arith_expr 
-- On RPAR reduce production cons_expr -> cons_expr CONS arith_expr 
-- On RBRA reduce production cons_expr -> cons_expr CONS arith_expr 
-- On LT reduce production cons_expr -> cons_expr CONS arith_expr 
-- On IN reduce production cons_expr -> cons_expr CONS arith_expr 
-- On EQ reduce production cons_expr -> cons_expr CONS arith_expr 
-- On EOF reduce production cons_expr -> cons_expr CONS arith_expr 
-- On EOC reduce production cons_expr -> cons_expr CONS arith_expr 
-- On END reduce production cons_expr -> cons_expr CONS arith_expr 
-- On ELSE reduce production cons_expr -> cons_expr CONS arith_expr 
-- On CONS reduce production cons_expr -> cons_expr CONS arith_expr 
-- On COMMA reduce production cons_expr -> cons_expr CONS arith_expr 
-- On BAR reduce production cons_expr -> cons_expr CONS arith_expr 

State 30:
arith_expr -> arith_expr PLUS . factor_expr [ WITH THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE CONS COMMA BAR ]
-- On LPAR shift to state 2
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On BOOL shift to state 18
-- On factor_expr shift to state 31
-- On atomic_expr shift to state 21
-- On app_expr shift to state 32

State 31:
arith_expr -> arith_expr PLUS factor_expr . [ WITH THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE CONS COMMA BAR ]
factor_expr -> factor_expr . TIMES app_expr [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE DIV CONS COMMA BAR ]
factor_expr -> factor_expr . DIV app_expr [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE DIV CONS COMMA BAR ]
-- On TIMES shift to state 20
-- On DIV shift to state 24
-- On WITH reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On THEN reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On SEMI reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On RPAR reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On RBRA reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On PLUS reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On MINUS reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On LT reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On IN reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On EQ reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On EOF reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On EOC reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On END reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On ELSE reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On CONS reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On COMMA reduce production arith_expr -> arith_expr PLUS factor_expr 
-- On BAR reduce production arith_expr -> arith_expr PLUS factor_expr 

State 32:
app_expr -> app_expr . atomic_expr [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT LPAR LBRA INT IN ID EQ EOF EOC END ELSE DIV CONS COMMA BOOL BAR ]
factor_expr -> app_expr . [ WITH TIMES THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE DIV CONS COMMA BAR ]
-- On LPAR shift to state 2
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On BOOL shift to state 18
-- On atomic_expr shift to state 23
-- On WITH reduce production factor_expr -> app_expr 
-- On TIMES reduce production factor_expr -> app_expr 
-- On THEN reduce production factor_expr -> app_expr 
-- On SEMI reduce production factor_expr -> app_expr 
-- On RPAR reduce production factor_expr -> app_expr 
-- On RBRA reduce production factor_expr -> app_expr 
-- On PLUS reduce production factor_expr -> app_expr 
-- On MINUS reduce production factor_expr -> app_expr 
-- On LT reduce production factor_expr -> app_expr 
-- On IN reduce production factor_expr -> app_expr 
-- On EQ reduce production factor_expr -> app_expr 
-- On EOF reduce production factor_expr -> app_expr 
-- On EOC reduce production factor_expr -> app_expr 
-- On END reduce production factor_expr -> app_expr 
-- On ELSE reduce production factor_expr -> app_expr 
-- On DIV reduce production factor_expr -> app_expr 
-- On CONS reduce production factor_expr -> app_expr 
-- On COMMA reduce production factor_expr -> app_expr 
-- On BAR reduce production factor_expr -> app_expr 

State 33:
arith_expr -> arith_expr MINUS . factor_expr [ WITH THEN SEMI RPAR RBRA PLUS MINUS LT IN EQ EOF EOC END ELSE CONS COMMA BAR ]
-- On LPAR shift to state 2
-- On LBRA shift to state 10
-- On INT shift to state 12
-- On ID shift to state 14
-- On BOOL shift to state 18
-- On factor_expr shift to state 34
-- On atomic_expr shift to state 21
-- On app_expr shift to state 32
